# Python_PycharmProjects

./: HW_Python_3.py  HW_Python_4.py  p1.json  pyproject.toml
python_core_lesson5/: async.py  async_cat.py  multiprocess.py  threads.py
